--- a/content/publication/2016_bosch_thesis/cite.bib
+++ b/content/publication/2016_bosch_thesis/cite.bib
@@ -1,12 +1,8 @@
-@article{Dijkstra2017Feb,
-	author = {Dijkstra, Nadine and Bosch, Sander E. and van Gerven, Marcel A. J.},
-	title = {{Vividness of Visual Imagery Depends on the Neural Overlap with Perception in Visual Areas}},
-	journal = {J. Neurosci.},
-	volume = {37},
-	number = {5},
-	pages = {1367--1373},
-	year = {2017},
-	month = {Feb},
-	issn = {1529-2401},
-	doi = {10.1523/JNEUROSCI.3022-16.2016}
+@book{Bosch2016,
+	author = {Bosch, S.E.},
+	title = {{Reactivating memories in hippocampus and neocortex}},
+	year = {2016},
+	isbn = {978-946284042-3},
+	publisher = {[Donders Series]},
+	url = {https://repository.ubn.ru.nl/handle/2066/151557}
 }
