--- a/content/publication/2019_dijkstra_biorxiv/cite.bib
+++ b/content/publication/2019_dijkstra_biorxiv/cite.bib
@@ -1,11 +1,13 @@
-@article{Dijkstra2019Apr,
+@article{Dijkstra2019Oct,
 	author = {Dijkstra, N. and Hinne, M. and Bosch, S. E. and van Gerven, M. A. J.},
-	title = {{Individual differences in the influence of mental imagery on conscious perception}},
-	journal = {bioRxiv},
-	pages = {607770},
+	title = {{Between-subject variability in the influence of mental imagery on conscious perception}},
+	journal = {Sci. Rep.},
+	volume = {9},
+	number = {15658},
+	pages = {1--10},
 	year = {2019},
-	month = {Apr},
-	publisher = {Cold Spring Harbor Laboratory},
-	eprint = {607770},
-	doi = {10.1101/607770}
+	month = {Oct},
+	issn = {2045-2322},
+	publisher = {Nature Publishing Group},
+	doi = {10.1038/s41598-019-52072-1}
 }
